--- a/templates/detail.html
+++ b/templates/detail.html
@@ -2,13 +2,23 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
     <title>{{ object.full_name }} | LA Riot Deaths</title>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
     <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
   </head>
   <body>
+    <nav>
+        <a href="http://first-news-app.readthedocs.org/">
+            <img src="{{ url_for('static', filename='irelogo.png') }}">
+        </a>
+    </nav>
+    <header>
+        <h1>{{ object.full_name }}, a {{ object.age }} year old, {{ object.race|lower }} {{ object.gender|lower }} died on {{ object.date }}
+in a {{ object.type|lower }} at {{ object.address }} in {{ object.neighborhood }}.</h1>
+    </header>
     <div id="map" style="width:100%;height:300px;"></div>
-    <h1>{{ object.full_name }}, a {{ object.age }} year old {{ object.race }} {{object.gender | lower}} died on {{object.date}} in a {{object.type | lower}} at {{object.address}} in {{ object.neighborhood }}</h1>
     <script type="text/javascript">
       var map = L.map('map').setView([{{object.y}}, {{object.x}}], 16);
       var mapquestLayer = new L.TileLayer('http://{s}.mqcdn.com/tiles/1.0.0/map/{z}/{x}/{y}.png', {
@@ -17,7 +27,13 @@
         subdomains: ['otile1','otile2','otile3','otile4']
       });
       map.addLayer(mapquestLayer);
-      var marker = L.marker([{{object.y}},{{object.x}}]).addTo(map);
+      var blackIcon = L.Icon.extend({
+          options: {
+              iconUrl: "{{ url_for('static', filename='marker242x.png') }}",
+              iconSize: [48, 48]
+          }
+      });
+      var marker = L.marker([{{ object.y }}, {{ object.x }}], {icon: new blackIcon()}).addTo(map);
     </script>
   </body>
 </html>
